Added MIT license

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,6 @@
             "name": "Svetlan Nikolov",
             "email": "svetlan.nikolov@yahoo.com"
         }
-    ]
+    ],
+    "license": "MIT"
 }
