--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -105,11 +105,9 @@ jobs:
     - name: Clone database repository
       run: git clone https://github.com/sensgithub/eHospital-Management-System.git
     
-    - name: Import SQL file
-      run: mysql --host 127.0.0.1 --port 33306 -uroot -ppassword ehospital < ${{github.workspace}}/eHospital-Management-System/ehospital.sql
-      
-    - name: Check imported data
-      run: |
-        echo "Checking the imported data"
-        mysql --host 127.0.0.1 --port 33306 -uroot -ppassword ehospital <<< 'SELECT * from doctor' 2>/dev/null
-
+    - name: Import SQL file & Check
+      run: | 
+          mysql --host localhost --port 33306 -uroot -ppassword ehospital < ${{github.workspace}}/eHospital-Management-System/ehospital.sql
+          echo "Checking the imported data"
+          mysql --host localhost --port 33306 -uroot -ppassword ehospital <<< 'SELECT * from doctor' 2>/dev/null
+        
