--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -87,12 +87,34 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         env:
           DOCKER_BUILDKIT: 1
-      
-      - name: Build and push Docker image
+
+      - name: Build image and push to Docker Hub 
         uses: docker/build-push-action@v2
         with:
           context: .
-          dockerfile: Dockerfile
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
-        
+          tags: |
+            sens31/ehospital:${{ github.sha }}
+          push: ${{ github.ref == 'refs/heads/main' }}
+
+  update-manifest-stage:
+    runs-on: ubuntu-latest
+    needs: ['build']
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          repository: sensgithub/DevOps-Project
+          ref: 'main'
+          token: ${{ secrets.G_TOKEN }}
+
+      - name: setup git config
+        run: |
+          git config --global user.email "svetlan.nikolov@yahoo.com"
+          git config --global user.name "sensgithub"
+          echo ${{ github.sha }}
+          sed -i "s#${{ github.actor }}.*#${{ github.actor }}/eHospital-Management-System:${{ github.sha }}#g" YAML/php-deployment.yml
+          git add -A
+          git commit -am "Update image for - ${{ github.sha }}"
+      - run: echo ${{ github }}
+      - run: git push origin main
+      
+      
