--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ env:
   IMAGE_NAME: sens31/ehospital
   GITHUB_REPO: sensgithub/eHospital-Management-System
   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
+  
 jobs:
 
   security:
@@ -84,21 +84,13 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         env:
           DOCKER_BUILDKIT: 1
-
-      - name: Login to Github Packages
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.G_TOKEN }}
           
       - name: Build image and push to Docker Hub and GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
           context: ./
           tags: |
-            sensgithub/ehospital:${{ github.sha }} 
-            ghcr.io/sensgithub/ehospital:${{ github.sha }}
+            IMAGE_NAME:${{ github.sha }} 
           push: ${{ github.ref == 'refs/heads/main' }}
 
   update-manifest-stage:
@@ -118,7 +110,7 @@ jobs:
           echo ${{ github.sha }}
           sed -i "s#${{ github.actor }}.*#${{ github.actor }}/DevOps-Project${{ github.sha }}#g" php-deployment.yml
           git add -A
-          git commit -am "Update image for - ${{ github.sha }}"  
+          git commit -am "Update image for - eHospital:${{ github.sha }}"  
           
       - run: echo ${{ github }}
       - run: git push origin main
