--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -73,25 +73,28 @@ jobs:
         
         
   build:
-  
+
     runs-on: ubuntu-latest
-    needs: test
+
+    defaults:
+      run:
+        shell: bash
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        env:
-          DOCKER_BUILDKIT: 1
-          
-      - name: Build image and push to Docker Hub and GitHub Container Registry
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          tags: |
-            IMAGE_NAME:${{ github.sha }} 
-          push: ${{ github.ref == 'refs/heads/main' }}
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Docker build
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:${GITHUB_SHA::7}
+
+    - name: Login to the registry
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Docker push
+      run: docker push $IMAGE_NAME:${GITHUB_SHA::7}
 
   update-manifest-stage:
     runs-on: ubuntu-latest
@@ -108,7 +111,7 @@ jobs:
           git config --global user.email "svetlan.nikolov@yahoo.com"
           git config --global user.name "sensgithub"
           echo ${{ github.sha }}
-          sed -i "s#${{ github.actor }}.*#${{ github.actor }}/DevOps-Project${{ github.sha }}#g" php-deployment.yml
+          sed -i "s#${{ github.actor }}.*#${{ github.actor }}/ehospital:${{ github.sha }}#g" php-deployment.yml
           git add -A
           git commit -am "Update image for - eHospital:${{ github.sha }}"  
           
