--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -85,7 +85,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Docker build
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME:${GITHUB_SHA::7}
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:${{ github.sha }}
 
     - name: Login to the registry
       uses: docker/login-action@v1 
