--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -109,8 +109,8 @@ jobs:
       run: |
         git config --global user.email "svetlan.nikolov@yahoo.com"
         git config --global user.name "sensgithub"
-        echo ${{ github.actor }}
         sed -i "s#sens31.*#sens31/ehospital:${{ github.sha }}#g" YAML/php-deployment.yml
+        cd YAML
         git add php-deployment.yml
         git commit -m "Update Docker image => ehospital:${{ github.sha }}"
         git push origin master
