--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -102,7 +102,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: sensgithub/DevOps-Project
-        ref: 'master'
+        ref: 'main'
         token: ${{ secrets.GIT_TOKEN }}
       
     - name: Update deployment YAML file
@@ -113,4 +113,4 @@ jobs:
         cd YAML
         git add php-deployment.yml
         git commit -m "Update Docker image => ehospital:${{ github.sha }}"
-        git push origin master
+        git push origin main
