--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -83,7 +83,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Docker build
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME:${{ github.sha }}
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:${GITHUB_SHA::7}
 
     - name: Login to the registry
       uses: docker/login-action@v1 
@@ -92,7 +92,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Docker push
-      run: docker push $IMAGE_NAME:${{ github.sha }}
+      run: docker push $IMAGE_NAME:${GITHUB_SHA::7}
 
   update-deployment:
     runs-on: ubuntu-latest
@@ -109,8 +109,8 @@ jobs:
       run: |
         git config --global user.email "svetlan.nikolov@yahoo.com"
         git config --global user.name "sensgithub"
-        sed -i "s#sens31.*#sens31/ehospital:${{ github.sha }}#g" YAML/php-deployment.yml
+        sed -i "s#sens31.*#sens31/ehospital:${GITHUB_SHA::7}#g" YAML/php-deployment.yml
         cd YAML
         git add php-deployment.yml
-        git commit -m "Update Docker image => ehospital:${{ github.sha }}"
+        git commit -m "Update Docker image => ehospital:${GITHUB_SHA::7}"
         git push origin main
